--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 </head>
 <body>
 <p style="font-family:bodoni">
-<h1>Plant milk</h1>
-<h2><i>Plant-based liquids, alternative milk, nut milk or vegan milk</i></h2>
+<h1>Plant milk<i>Plant-based liquids, alternative milk, nut milk or vegan milk</i></h1>
 </p>
 <p style="font-family:calibri">
-Plant-based beverages have been consumed for centuries, with the term &ldquo;milk-like plant juices&rdquo; used since the 13th century. Across various cultures, plant milk has been both a traditional beverage and a flavorful ingredient in sweet and savory dishes, such as the use of coconut milk in curries. Plant milks are also used to make ice cream, plant cream, vegan    cheese, and yogurt. A 2018 study found that 54% of U.S. consumers would like to eat more plant-based foods and beverages.
+Plant-based beverages have been consumed for centuries, with the term &ldquo;milk-like plant juices&rdquo; used since the 13th century. Across various cultures, plant milk has been both a traditional beverage and a flavorful ingredient in sweet and savory dishes, such as the use of coconut milk in curries. Plant milks are also used to make ice cream, plant cream, vegan    cheese, and yogurt.
 </p>
 </body>
 </html>
